--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMU51Gc3P3wOf0hnpA++ip+",
+      "authorship_tag": "ABX9TyPIIbh3kQh/bjOHSfnmCNXy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L3rN6BX6yt_m"
+        "id": "L3rN6BX6yt_m",
+        "outputId": "36d31d25-cb8a-472c-b3dd-dce46c9adeb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "3+5"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_3MBCD9VQQUm",
+        "outputId": "90d06336-5f25-4800-b0e0-c48d15513d50",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "5*8"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "40"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kG6Fs0VQUbN"
       },
       "source": [
         ""
