--- a/The_Fundamentals_of_Python_Using_Jupyter.ipynb
+++ b/The_Fundamentals_of_Python_Using_Jupyter.ipynb
@@ -22,6 +22,24 @@
     "colab": {
       "name": "The Fundamentals of Python Using Jupyter.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "CldrY7ea7QRU",
+        "SPoIBBTX7QRU",
+        "q46sm3Nu7QRU",
+        "4QeievQM7QRV",
+        "kYxEqEas7QRV",
+        "MY7bv_v97QRV",
+        "dQLvBwjS7QRX",
+        "G-asMdMh7QRX",
+        "M3PhyDbv7QRX",
+        "kSbUT2V87QRa",
+        "5j5PzsaS7QRf",
+        "d6ylbiqQ7QRg",
+        "8Rk8Y1r97QRl",
+        "FL4dCbnm7QRm",
+        "1F4o-1Ns7QRn",
+        "8sLvxFfD7QRo"
+      ],
       "include_colab_link": true
     }
   },
@@ -48,7 +66,6 @@
         "\n",
         "Python is an interpreted high-level programming language for general-purpose programming, created by Guido van Rossum and first released in 1991.\n",
         "\n",
-        " **bold text**\n",
         "\n",
         "This lecture introduces Python using Jupyter Notebooks."
       ]
@@ -77,7 +94,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1Hl0naPA7QRO",
-        "outputId": "2d03a923-e9d9-46ad-cfc2-8bd1ca2c24be"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34602799-f199-4030-99b4-c4eac9f9cece"
       },
       "source": [
         "1 + 1"
@@ -94,7 +114,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 1
         }
       ]
     },
@@ -104,9 +124,7 @@
         "id": "ptc7YZAC7QRO"
       },
       "source": [
-        "## Virtual Environment\n",
-        "\n",
-        "For this course you are required to have Anaconda 3 distribution installed. If you have problems with installation contact one of instructos."
+        ""
       ]
     },
     {
@@ -135,10 +153,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "LmVdx7947QRO",
-        "outputId": "6735fee4-ff62-4844-aadf-c5393b352c9f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a8daed27-f5ff-421c-f08c-ba20aac1abe7"
       },
       "source": [
-        "a = [5,6,7,8,9]\n",
+        "a = [5,6,7,8,9,11]\n",
         "a"
       ],
       "execution_count": null,
@@ -147,13 +168,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[5, 6, 7, 8, 9]"
+              "[5, 6, 7, 8, 9, 11]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 3
         }
       ]
     },
