--- a/The_Fundamentals_of_Python_Using_Colab.ipynb
+++ b/The_Fundamentals_of_Python_Using_Colab.ipynb
@@ -3225,12 +3225,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8iprvv6Fa7Xa",
+        "outputId": "2f27e500-bbb1-4ebf-d864-847bc72b6e63"
+      },
+      "source": [
+        "def sum_1(x, y,z):\n",
+        "    return x+y+z\n",
+        "\n",
+        "print(sum_1(2,3,5))"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "0m-o6BTuDdV-"
       },
       "source": [
         "# Ex #2: Create a function to add three numbers using lambda"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K3MQX4uoa_gF",
+        "outputId": "2369369f-75b2-4642-c223-20a3722d1b2c"
+      },
+      "source": [
+        "sum_2 = lambda x,y,z: x+y+z\n",
+        "sum_2(2,3,5)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
       ]
     },
     {
